--- a/gestor/templates/crear.html
+++ b/gestor/templates/crear.html
@@ -26,11 +26,10 @@
                 
                 <div class="text-center mb-3">
                     <button class="btn btn-success " type="submit">Guardar</button>
+                    <a href="/">
+                        <button class="btn btn-danger">Cancelar</button>
+                    </a>                    
                 </div>
-                <div class="text-center">
-                    <button class="btn btn-danger " type="submit"><a href="/">Cancelar</a></button>
-                </div>
-                
             </form>
         </div>
     </body>
