--- a/gestor/templates/crear.html
+++ b/gestor/templates/crear.html
@@ -26,9 +26,7 @@
                 
                 <div class="text-center mb-3">
                     <button class="btn btn-success " type="submit">Guardar</button>
-                    <a href="/">
-                        <button class="btn btn-danger">Cancelar</button>
-                    </a>                    
+                    <a href="/" class="btn btn-danger">Cancelar</a>                  
                 </div>
             </form>
         </div>
